--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "mergiraf"
 version = "0.1.0"
 edition = "2018"
 license = "GPL-3.0-only"
+repository = "https://codeberg.org/mergiraf/mergiraf"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
