--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -23,4 +23,4 @@ jobs:
             target            
           key: "${{runner.os}} Rust ${{steps.rust-toolchain.outputs.cachekey}}"
       - name: Run tests
-        run: cargo test --all-features
+        run: cargo test --all-features --frozen
