--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,14 +18,14 @@ cc="*"
 tree-sitter = "0.24"
 tree-sitter-rust = "0.23"
 tree-sitter-json = "0.23"
-tree-sitter-yaml = { git = "https://github.com/wetneb/tree-sitter-yaml.git", rev = "7b5199133abceb03d6d1d8f1672f49b4f2a71442" }
+tree-sitter-yaml = "0.6.1"
 tree-sitter-java = "0.23"
 tree-sitter-html = "0.23"
 tree-sitter-javascript = "0.23"
 tree-sitter-cpp = "0.23"
 tree-sitter-c-sharp = "0.23"
 tree-sitter-xml = { git = "https://github.com/tree-sitter-grammars/tree-sitter-xml.git", rev = "cd1316e476ec40da6ce1fb5749c9d7e6b4f1090c" }
-tree-sitter-go = { git = "https://github.com/tree-sitter/tree-sitter-go.git", rev = "ecc20866d1bd4d80f3aef06456ed3014d4d598e6" }
+tree-sitter-go = "0.23.2"
 tree-sitter-dart = "0.0.4"
 regex = "1.10.4"
 graphviz-rust = { version = "0.9.0", optional = true }
