chore: Add package description for crates.io
And specify "cc" version to make Crates.io happy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,12 @@ keywords = ["git", "tree-sitter", "merge-driver"]
 categories = ["development-tools"]
 homepage = "https://mergiraf.org/"
 documentation = "https://mergiraf.org/"
+description = "A syntax-aware merge driver for Git"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-cc="*"
+cc=">=1.1"
 
 [dependencies]
 tree-sitter = "0.24"
