--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ etcetera = "0.8.0"
 zip = { version = "2.2.0", features = ["deflate"], default-features = false }
 tree-sitter-scala = "0.23.3"
 either = "1.13.0"
+rustc-hash = "2.0.0"
 
 [dev-dependencies]
 rstest = "0.21.0"
