--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tree-sitter-xml = "0.7.0"
 tree-sitter-go = "0.23.2"
 tree-sitter-dart = "0.0.4"
 tree-sitter-typescript = "0.23.2"
+tree-sitter-python = "0.23.4"
 regex = "1.10.4"
 itertools = "0.13.0"
 typed-arena = "2"
