--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ tree-sitter-c-sharp = "0.23"
 tree-sitter-xml = "0.7.0"
 tree-sitter-go = "0.23.2"
 tree-sitter-dart = "0.0.4"
+tree-sitter-typescript = "0.23.2"
 regex = "1.10.4"
 graphviz-rust = { version = "0.9.0", optional = true }
 itertools = "0.13.0"
