--- a/members.yml
+++ b/members.yml
@@ -5,3 +5,4 @@ publishers: # this corresponds to the "Owners" team: https://codeberg.org/org/me
   - wetneb
 
 developers: # this corresponds to the "Developers" team: https://codeberg.org/org/mergiraf/teams/developers
+  - ugur-a
