--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -6,6 +6,17 @@ on:
     branches:
       - main
 jobs:
+  rustfmt:
+    runs-on: my-ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Rust
+        uses: https://code.forgejo.org/msrd0/rust-toolchain@stable
+        id: rust-toolchain
+        with:
+          components: rustfmt
+      - run: cargo fmt --all -- --check
+
   test:
     runs-on: my-ubuntu-22.04
     steps:
