--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ tree-sitter = "0.24"
 tree-sitter-rust = "0.23"
 tree-sitter-json = "0.23"
 tree-sitter-yaml = "0.6.1"
+tree-sitter-toml-ng = "0.6.0"
 tree-sitter-java = "0.23"
 tree-sitter-html = "0.23"
 tree-sitter-javascript = "0.23"
