--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mergiraf"
-version = "0.3.2"
+version = "0.4.0-alpha1"
 edition = "2018"
 license = "GPL-3.0-only"
 repository = "https://codeberg.org/mergiraf/mergiraf"
