--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -17,6 +17,17 @@ jobs:
           components: rustfmt
       - run: cargo fmt --all -- --check
 
+  clippy:
+    runs-on: my-ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Rust
+        uses: https://code.forgejo.org/msrd0/rust-toolchain@stable
+        id: rust-toolchain
+        with:
+          components: clippy
+      - run: cargo clippy --all-targets
+
   test:
     runs-on: my-ubuntu-22.04
     steps:
