--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,6 @@ regex = "1.10.4"
 itertools = "0.13.0"
 typed-arena = "2"
 tree-edit-distance = "0.4"
-diffy = "0.4"
 clap = { version = "4.5.7", features = ["derive"] }
 stderrlog = "0.6"
 log = "0.4"
@@ -45,10 +44,12 @@ zip = { version = "2.2.0", features = ["deflate"], default-features = false }
 tree-sitter-scala = "0.23.3"
 either = "1.13.0"
 rustc-hash = "2.0.0"
+imara-mergy = "0.1.3"
 
 [dev-dependencies]
 rstest = "0.23.0"
 tempfile = "3"
+diffy = "0.4"
 
 [profile.dev]
 # to conform to Git's protocol for merge drivers, which requires
