--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,12 +44,11 @@ zip = { version = "2.2.0", features = ["deflate"], default-features = false }
 tree-sitter-scala = "0.23.3"
 either = "1.13.0"
 rustc-hash = "2.0.0"
-imara-mergy = "0.1.3"
+diffy-imara = "0.1.0"
 
 [dev-dependencies]
 rstest = "0.23.0"
 tempfile = "3"
-diffy = "0.4"
 
 [profile.dev]
 # to conform to Git's protocol for merge drivers, which requires
