--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ tree-sitter-go = "0.23.2"
 tree-sitter-dart = "0.0.4"
 tree-sitter-typescript = "0.23.2"
 tree-sitter-python = "0.23.4"
+tree-sitter-php = "0.23"
 regex = "1.10.4"
 itertools = "0.13.0"
 typed-arena = "2"
