ci: also cache build dependencies when running clippy (#113)
copy-pasted from the testing workflow

Co-authored-by: Ughur Alakbarov <ugur.alekperov@gmail.com>
Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/113
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Co-authored-by: ugur-a <ugur-a@noreply.codeberg.org>
Co-committed-by: ugur-a <ugur-a@noreply.codeberg.org>

--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -26,6 +26,14 @@ jobs:
         id: rust-toolchain
         with:
           components: clippy
+      - name: Cache build dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/git
+            ~/.cargo/registry
+            target            
+          key: "${{runner.os}} Rust ${{steps.rust-toolchain.outputs.cachekey}}"
       - run: cargo clippy --all-targets
 
   test:
