chore(clippy): add some pedantic lints (#116)
those are the ones that I find very important for some reason

Co-authored-by: Ughur Alakbarov <ugur.alekperov@gmail.com>
Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/116
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,3 +60,13 @@ panic = "abort"
 strip = true
 lto = true
 debug = false
+
+[lints.clippy]
+explicit_into_iter_loop = "warn"
+explicit_iter_loop = "warn"
+needless_pass_by_value = "warn"
+semicolon_if_nothing_returned = "warn"
+single_char_pattern = "warn"
+single_match_else = "warn"
+trivially_copy_pass_by_ref = "warn"
+uninlined_format_args = "warn"
