ci: make clippy actually useful by turning its warnings into errors (#117)
and I was wondering why CI constantly complained about these but didn't fail

Co-authored-by: Ughur Alakbarov <ugur.alekperov@gmail.com>
Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/117
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>

--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
             ~/.cargo/registry
             target            
           key: "${{runner.os}} Rust ${{steps.rust-toolchain.outputs.cachekey}}"
-      - run: cargo clippy --all-targets
+      - run: cargo clippy --all-targets -- -Dwarnings
 
   test:
     runs-on: my-ubuntu-22.04
