--- a/members.yml
+++ b/members.yml
@@ -3,6 +3,6 @@
 
 publishers: # this corresponds to the "Owners" team: https://codeberg.org/org/mergiraf/teams/owners
   - wetneb
-  - ugur-a
+  - ada4a
 
 developers: # this corresponds to the "Developers" team: https://codeberg.org/org/mergiraf/teams/developers
