feat: add basic lua support (#146)
I'm sure there are some improvements that could be made (e.g. with
certain `requires` or keyed table entries being commutative), but
starting with basic support gets us pretty far.

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/146
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Co-authored-by: Brian Lyles <brianmlyles@gmail.com>
Co-committed-by: Brian Lyles <brianmlyles@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ tree-sitter-typescript = "0.23.2"
 tree-sitter-python = "0.23.4"
 tree-sitter-php = "0.23"
 tree-sitter-solidity = "1.2.10"
+tree-sitter-lua = "0.2.0"
 regex = "1.10.4"
 itertools = "0.14.0"
 typed-arena = "2"
