refactor(tree/ascii_tree): use `nu_ansi_term` to color strings (#147)
I think this is clearer than all the hand-written ANSI codes

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/147
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Co-authored-by: Ada Alakbarova <ada.alakbarova@proton.me>
Co-committed-by: Ada Alakbarova <ada.alakbarova@proton.me>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ tree-sitter-scala = "0.23.3"
 either = "1.13.0"
 rustc-hash = "2.0.0"
 diffy-imara = "0.1.0"
+nu-ansi-term = "0.50.1"
 
 [dev-dependencies]
 rstest = "0.23.0"
