--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ tree-sitter-json = "0.23"
 tree-sitter-yaml = "0.6.1"
 tree-sitter-toml-ng = "0.6.0"
 tree-sitter-java = "0.23"
+tree-sitter-kotlin-ng = "1.1.0"
 tree-sitter-html = "0.23"
 tree-sitter-javascript = "0.23"
 tree-sitter-cpp = "0.23"
