--- a/members.yml
+++ b/members.yml
@@ -6,3 +6,4 @@ publishers: # this corresponds to the "Owners" team: https://codeberg.org/org/me
   - ada4a
 
 developers: # this corresponds to the "Developers" team: https://codeberg.org/org/mergiraf/teams/developers
+  - zivarah
