--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -6,44 +6,16 @@ on:
     branches:
       - main
 jobs:
-  rustfmt:
-    runs-on: my-ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install Rust
-        uses: https://code.forgejo.org/msrd0/rust-toolchain@stable
-        id: rust-toolchain
-        with:
-          components: rustfmt
-      - run: cargo fmt --all -- --check
-
-  clippy:
-    runs-on: my-ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install Rust
-        uses: https://code.forgejo.org/msrd0/rust-toolchain@stable
-        id: rust-toolchain
-        with:
-          components: clippy
-      - name: Cache build dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/git
-            ~/.cargo/registry
-            target            
-          key: "${{runner.os}} Rust ${{steps.rust-toolchain.outputs.cachekey}}"
-      - run: cargo clippy --all-targets -- -Dwarnings
-
   test:
     runs-on: my-ubuntu-22.04
     steps:
       - name: Check out repository
-        uses: https://github.com/actions/checkout@v4
+        uses: actions/checkout@v4
       - name: Install Rust
         uses: https://code.forgejo.org/msrd0/rust-toolchain@stable
         id: rust-toolchain
+        with:
+          components: clippy, rustfmt
       - name: Cache build dependencies
         uses: actions/cache@v4
         with:
@@ -52,5 +24,9 @@ jobs:
             ~/.cargo/registry
             target            
           key: "${{runner.os}} Rust ${{steps.rust-toolchain.outputs.cachekey}}"
+      - name: Format
+        run: cargo fmt --all -- --check
+      - name: Lint
+        run: cargo clippy --all-targets -- -Dwarnings
       - name: Run tests
         run: cargo test --all-features
