ci: fix and improve caching (#173)
Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/173
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Co-authored-by: Ada Alakbarova <ada.alakbarova@proton.me>
Co-committed-by: Ada Alakbarova <ada.alakbarova@proton.me>

--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -20,10 +20,12 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            ~/.cargo/git
-            ~/.cargo/registry
-            target            
-          key: "${{runner.os}} Rust ${{steps.rust-toolchain.outputs.cachekey}}"
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: "${{runner.os}} Rust ${{steps.rust-toolchain.outputs.cachekey}} lock ${{ hashFiles('**/Cargo.lock') }}""
       - name: Format
         run: cargo fmt --all -- --check
       - name: Lint
