--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ either = "1.13.0"
 rustc-hash = "2.1.0"
 diffy-imara = "0.1.0"
 nu-ansi-term = "0.50.1"
+oneshot = {version = "0.1.8", default-features = false, features = ["std"]}
 
 [dev-dependencies]
 rstest = "0.24.0"
