ci: implement various tips from a blog post (#178)
the link to the post: https://corrode.dev/blog/tips-for-faster-ci-builds

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/178
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Co-authored-by: Ada Alakbarova <ada.alakbarova@proton.me>
Co-committed-by: Ada Alakbarova <ada.alakbarova@proton.me>

--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -5,6 +5,11 @@ on:
   pull_request:
     branches:
       - main
+
+env:
+  CARGO_INCREMENTAL: 0
+  CARGO_PROFILE_TEST_DEBUG: 0
+
 jobs:
   test:
     runs-on: my-ubuntu-22.04
@@ -29,6 +34,6 @@ jobs:
       - name: Format
         run: cargo fmt --all -- --check
       - name: Lint
-        run: cargo clippy --all-targets -- -Dwarnings
+        run: cargo clippy --all-targets --locked -- -Dwarnings
       - name: Run tests
-        run: cargo test --all-features
+        run: cargo test --all-features --locked
