feat: add language support for Devicetree Source files (#175)
This commit adds language support for https://www.devicetree.org/
source files.

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/175
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Co-authored-by: Funkeleinhorn <git@funkeleinhorn.com>
Co-committed-by: Funkeleinhorn <git@funkeleinhorn.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ rustc-hash = "2.1.0"
 diffy-imara = "0.1.0"
 nu-ansi-term = "0.50.1"
 oneshot = {version = "0.1.8", default-features = false, features = ["std"]}
+tree-sitter-devicetree = "0.12.1"
 
 [dev-dependencies]
 rstest = "0.24.0"
