--- a/members.yml
+++ b/members.yml
@@ -7,3 +7,4 @@ publishers: # this corresponds to the "Owners" team: https://codeberg.org/org/me
 
 developers: # this corresponds to the "Developers" team: https://codeberg.org/org/mergiraf/teams/developers
   - zivarah
+  - funkeleinhorn
