--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ tree-sitter-python = "0.23.6"
 tree-sitter-php = "0.23"
 tree-sitter-solidity = "1.2.10"
 tree-sitter-lua = "0.2.0"
+tree-sitter-ruby = "0.23.1"
 regex = "1.11.1"
 itertools = "0.14.0"
 typed-arena = "2"
