chore: Upgrade cc to v1.2.12 (#191)
Somehow cross compilation to MacOS targets fails without this upgrade, at least on my machine.
I'm not sure if I should add `cc` in our `Cargo.toml`. Since it's just an indirect dependency, I thought it's enough to bump it in the lock file.

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/191
Reviewed-by: Ada Alakbarova <ada4a@noreply.codeberg.org>
Co-authored-by: Antonin Delpeuch <antonin@delpeuch.eu>
Co-committed-by: Antonin Delpeuch <antonin@delpeuch.eu>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,10 @@ nu-ansi-term = "0.50.1"
 oneshot = {version = "0.1.8", default-features = false, features = ["std"]}
 tree-sitter-devicetree = "0.12.1"
 
+# for transitive dependencies that incorrectly specify minimal required versions of their dependencies
+[target."cfg(any())".dependencies]
+cc = "1.2.12" # required for cross-compiling to MacOS X
+
 [dev-dependencies]
 rstest = "0.24.0"
 tempfile = "3"
