feat(LangProfile::detect_from_filename): handle extension comparison more correctly (#220)
Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/220
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Co-authored-by: Ada Alakbarova <ada.alakbarova@proton.me>
Co-committed-by: Ada Alakbarova <ada.alakbarova@proton.me>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,6 +74,7 @@ lto = true
 debug = false
 
 [lints.clippy]
+case_sensitive_file_extension_comparisons = "warn"
 explicit_into_iter_loop = "warn"
 explicit_iter_loop = "warn"
 needless_pass_by_value = "warn"
