governance: Add bobvanderlinden to the developers team (#239)
As suggested by @wetneb https://codeberg.org/mergiraf/mergiraf/pulls/238#issuecomment-2887379

I probably won't be a very active member, but I'm very much a proponent of reducing the bus-factor and will respond when pinged.

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/239
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Reviewed-by: Ada Alakbarova <ada4a@noreply.codeberg.org>
Reviewed-by: zivarah <zivarah@noreply.codeberg.org>
Co-authored-by: Bob van der Linden <bobvanderlinden@gmail.com>
Co-committed-by: Bob van der Linden <bobvanderlinden@gmail.com>

--- a/members.yml
+++ b/members.yml
@@ -8,3 +8,4 @@ publishers: # this corresponds to the "Owners" team: https://codeberg.org/org/me
 developers: # this corresponds to the "Developers" team: https://codeberg.org/org/mergiraf/teams/developers
   - zivarah
   - funkeleinhorn
+  - bobvanderlinden
