accomodate `cargo-flamegraph` (#257)
I sometimes run it when working on performance-sensitive stuff

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/257
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Co-authored-by: Ada Alakbarova <ada.alakbarova@proton.me>
Co-committed-by: Ada Alakbarova <ada.alakbarova@proton.me>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,11 +68,16 @@ tempfile = "3"
 # to conform to Git's protocol for merge drivers, which requires
 # a return code > 128 when an error occurs. This sets return code 134.
 panic = "abort"
+
 [profile.release]
 panic = "abort"
 strip = true
 lto = true
 debug = false
+
+[profile.bench]
+strip = false
+debug = true
 
 [lints.clippy]
 case_sensitive_file_extension_comparisons = "warn"
