chore: specify `cc` version with `>=` (#292)
as it is now, it gets updated when running `cargo upgrade` (see #252).
Specifying it like this allows it to be ignored

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/292
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Co-authored-by: Ada Alakbarova <ada.alakbarova@proton.me>
Co-committed-by: Ada Alakbarova <ada.alakbarova@proton.me>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,7 @@ tree-sitter-verilog = "1.0.3"
 
 # for transitive dependencies that incorrectly specify minimal required versions of their dependencies
 [target."cfg(any())".dependencies]
-cc = "1.2.16" # required for cross-compiling to MacOS X
+cc = ">=1.2.12" # required for cross-compiling to MacOS X
 
 [dev-dependencies]
 rstest = "0.25.0"
