refactor: rename `tree.rs` to `ast.rs` (#324)
Since most of the data structures in Mergiraf are trees, the current
name wasn't too descriptive

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/324
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Co-authored-by: Ada Alakbarova <ada.alakbarova@proton.me>
Co-committed-by: Ada Alakbarova <ada.alakbarova@proton.me>

--- a/.clippy.toml
+++ b/.clippy.toml
@@ -1,6 +1,6 @@
 ignore-interior-mutability = [
-        "mergiraf::tree::AstNode", "crate::tree::AstNode", "crate::AstNode", "mergiraf::AstNode",
-        "mergiraf::tree::AstNode<'_>", "crate::tree::AstNode<'_>", "crate::AstNode<'_>", "mergiraf::AstNode<'_>",
-        "&mergiraf::tree::AstNode<'_>", "&crate::tree::AstNode<'_>", "&crate::AstNode<'_>", "&mergiraf::AstNode<'_>",
-        "mergiraf_tree::AstNode"
+        "mergiraf::ast::AstNode", "crate::ast::AstNode", "crate::AstNode", "mergiraf::AstNode",
+        "mergiraf::ast::AstNode<'_>", "crate::ast::AstNode<'_>", "crate::AstNode<'_>", "mergiraf::AstNode<'_>",
+        "&mergiraf::ast::AstNode<'_>", "&crate::ast::AstNode<'_>", "&crate::AstNode<'_>", "&mergiraf::AstNode<'_>",
+        "mergiraf_ast::AstNode"
 ]
