--- a/members.yml
+++ b/members.yml
@@ -9,3 +9,4 @@ developers: # this corresponds to the "Developers" team: https://codeberg.org/or
   - zivarah
   - funkeleinhorn
   - bobvanderlinden
+  - senekor
