--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ tree-sitter-lua = "0.2.0"
 tree-sitter-ruby = "0.23.1"
 tree-sitter-properties = "0.3.0"
 tree-sitter-md = "0.3.2"
+tree-sitter-hcl = "1.1.0"
 regex = "1.11.1"
 itertools = "0.14.0"
 tree-sitter-nix = "0.0.2"
