--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ tree-sitter-ruby = "0.23.1"
 tree-sitter-properties = "0.3.0"
 tree-sitter-md = "0.3.2"
 tree-sitter-hcl = "1.1.0"
+tree-sitter-ini = "1.3.0"
 regex = "1.11.1"
 itertools = "0.14.0"
 tree-sitter-nix = "0.0.2"
