--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ tree-sitter-php = "0.23"
 tree-sitter-solidity = "1.2.11"
 tree-sitter-lua = "0.2.0"
 tree-sitter-ruby = "0.23.1"
+tree-sitter-elixir = "0.3"
 tree-sitter-properties = "0.3.0"
 tree-sitter-md = "0.3.2"
 tree-sitter-hcl = "1.1.0"
