--- a/cliff.toml
+++ b/cliff.toml
@@ -16,7 +16,7 @@ body = """
         - {% if commit.scope %}*({{ commit.scope }})* {% endif %}\
             {% if commit.breaking %}[**breaking**] {% endif %}\
             {{ commit.message | upper_first }}\
-            {% if commit.remote.username %} by @{{ commit.remote.username }}{%- endif %}
+            {% if commit.remote.username %} by @{{ commit.remote.username }}{%- endif %}\
     {% endfor %}
 {% endfor %}\n
 """
