chore: Move mgf_dev to a separate package (#458)
If mgf_dev is in the same package as the primary mergiraf binary,
`cargo install` will install both by default. When using cargo-binstall,
this will fail the installation, because the mgf_dev binary is not
included in our provided release packages.

With the binaries separated into distinct packages, cargo and related
tools will default to only the primary mergiraf binary for running or
installing.

closes #439

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/458
Reviewed-by: Ada Alakbarova <ada4a@noreply.codeberg.org>
Co-authored-by: Remo Senekowitsch <remo@buenzli.dev>
Co-committed-by: Remo Senekowitsch <remo@buenzli.dev>

--- a/.forgejo/workflows/release.yml
+++ b/.forgejo/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
             cargo install git-cliff --features gitea --version 2.9.1
           fi
       - name: Run tests
-        run: cargo test
+        run: cargo test --workspace
       - name: Create release_artifacts dir and generate release notes
         run: |
           mkdir target/release_artifacts
