--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -34,6 +34,6 @@ jobs:
       - name: Format
         run: cargo fmt --all -- --check
       - name: Lint
-        run: cargo clippy --all-targets --locked -- -Dwarnings
+        run: cargo clippy --workspace --all-targets --locked -- -Dwarnings
       - name: Run tests
-        run: cargo test --all-features --locked
+        run: cargo test --workspace --all-features --locked
