--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,13 @@
+[workspace]
+resolver = "3"
+members = ["mgf_dev"]
+
+[workspace.dependencies]
+clap = { version = "4.5.38", features = ["derive"] }
+stderrlog = "0.6"
+tempfile = "3"
+typed-arena = "2"
+
 [package]
 name = "mergiraf"
 version = "0.11.0"
@@ -46,10 +56,10 @@ tree-sitter-haskell = "0.23.1"
 regex = "1.11.1"
 itertools = "0.14.0"
 tree-sitter-nix = "0.0.2"
-typed-arena = "2"
+typed-arena.workspace = true
 tree-edit-distance = "0.4"
-clap = { version = "4.5.38", features = ["derive"] }
-stderrlog = "0.6"
+clap.workspace = true
+stderrlog.workspace = true
 log = "0.4"
 rand = "0.9.1"
 etcetera = "0.10.0"
@@ -70,7 +80,7 @@ cc = ">=1.2.12" # required for cross-compiling to MacOS X
 [dev-dependencies]
 caplog = "0.3.0"
 rstest = {version = "0.25.0", default-features = false}
-tempfile = "3"
+tempfile.workspace = true
 
 [profile.dev]
 # to conform to Git's protocol for merge drivers, which requires
