--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,6 +100,7 @@ debug = true
 [lints.clippy]
 case_sensitive_file_extension_comparisons = "warn"
 flat_map_option = "warn"
+default_trait_access = "warn"
 explicit_into_iter_loop = "warn"
 explicit_iter_loop = "warn"
 needless_pass_by_value = "warn"
