--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ tree-sitter-c-sharp = "0.23"
 tree-sitter-xml = "0.7.0"
 tree-sitter-go = "0.23.4"
 tree-sitter-gomod-orchard = "0.4"
+tree-sitter-gosum-orchard = "0.2"
 tree-sitter-dart = "0.0.4"
 tree-sitter-typescript = "0.23.2"
 tree-sitter-python = "0.23.6"
