--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -12,15 +12,10 @@ env:
 
 jobs:
   test:
-    runs-on: my-ubuntu-22.04
+    runs-on: ubuntu-with-rust-1.88 # uses Docker image https://hub.docker.com/r/pintoch/ubuntu-act-with-rust
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-      - name: Install Rust
-        uses: https://code.forgejo.org/msrd0/rust-toolchain@stable
-        id: rust-toolchain
-        with:
-          components: clippy, rustfmt
       - name: Cache build dependencies
         uses: actions/cache@v4
         with:
