--- a/.forgejo/workflows/release.yml
+++ b/.forgejo/workflows/release.yml
@@ -3,18 +3,13 @@ on:
     tags: 'v*'
 jobs:
   release:
-    runs-on: my-ubuntu-22.04
+    runs-on: ubuntu-with-rust-1.88 # uses Docker image https://hub.docker.com/r/pintoch/ubuntu-act-with-rust
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # for changelog generation
           $fetch-tags: true # for changelog generation
-      - name: Install Rust
-        uses: https://code.forgejo.org/msrd0/rust-toolchain@stable
-        id: rust-toolchain
-        with:
-          components: clippy, rustfmt
       - name: Cache build dependencies
         uses: actions/cache@v4
         with:
