ci: Fix crates.io upload (#494)
Makes sure the previous testing phase doesn't change `Cargo.lock`,
otherwise the upload fails as the working tree is dirty.

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/494
Reviewed-by: Ada Alakbarova <ada4a@noreply.codeberg.org>
Co-authored-by: Antonin Delpeuch <antonin@delpeuch.eu>
Co-committed-by: Antonin Delpeuch <antonin@delpeuch.eu>

--- a/.forgejo/workflows/release.yml
+++ b/.forgejo/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
             cargo install git-cliff --features gitea --version 2.9.1
           fi
       - name: Run tests
-        run: cargo test --workspace
+        run: cargo test --workspace --locked
       - name: Create release_artifacts dir and generate release notes
         run: |
           mkdir target/release_artifacts
