--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,7 +99,7 @@ debug = false
 strip = false
 debug = true
 
-[lints.clippy]
+[workspace.lints.clippy]
 case_sensitive_file_extension_comparisons = "warn"
 flat_map_option = "warn"
 default_trait_access = "warn"
