--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,7 +73,7 @@ diffy-imara = "0.3.2"
 nu-ansi-term = "0.50.1"
 oneshot = {version = "0.1.11", default-features = false, features = ["std"]}
 tree-sitter-devicetree = "0.14.1"
-tree-sitter-verilog = "1.0.3"
+tree-sitter-systemverilog = "0.2.0"
 
 # for transitive dependencies that incorrectly specify minimal required versions of their dependencies
 [target."cfg(any())".dependencies]
