--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,6 +74,7 @@ nu-ansi-term = "0.50.1"
 oneshot = {version = "0.1.11", default-features = false, features = ["std"]}
 tree-sitter-devicetree = "0.14.1"
 tree-sitter-systemverilog = "0.2.0"
+tree-sitter-make = "1.1.1"
 
 # for transitive dependencies that incorrectly specify minimal required versions of their dependencies
 [target."cfg(any())".dependencies]
