chore: Highlight new contributors in release notes (#528)
It adds something like this to the release notes (for 0.13.0 as an example):

```
## 🎉 New contributors

- @twz123 made their first contribution in #510
- @jadeprime made their first contribution in #508
```

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/528
Reviewed-by: Ada Alakbarova <ada4a@noreply.codeberg.org>
Co-authored-by: Antonin Delpeuch <antonin@delpeuch.eu>
Co-committed-by: Antonin Delpeuch <antonin@delpeuch.eu>

--- a/cliff.toml
+++ b/cliff.toml
@@ -18,7 +18,19 @@ body = """
             {{ commit.message | upper_first }}\
             {% if commit.remote.username %} by @{{ commit.remote.username }}{%- endif %}\
     {% endfor %}
-{% endfor %}\n
+{% endfor %}
+
+{%- if gitea -%}
+{% if gitea.contributors | filter(attribute="is_first_time", value=true) | length != 0 %}
+  ### 🎉 New contributors
+{% endif %}\
+{% for contributor in gitea.contributors | filter(attribute="is_first_time", value=true) %}
+  - @{{ contributor.username }} made their first contribution \
+    {%- if contributor.pr_number %} in #{{ contributor.pr_number }} \
+    {% endif %}
+{%- endfor -%}
+{% endif %}
+\n
 """
 # A Tera template to be rendered as the changelog's footer.
 # See https://keats.github.io/tera/docs/#introduction
