chore(cargo/aliases): run `mgf_dev compare` in release mode (#539)
came up in https://codeberg.org/mergiraf/mergiraf/pulls/537#issuecomment-5999227

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/539
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Co-authored-by: Ada Alakbarova <ada.alakbarova@proton.me>
Co-committed-by: Ada Alakbarova <ada.alakbarova@proton.me>

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,4 +2,5 @@
 merge = ["run", "--", "merge"]
 solve = ["run", "--", "solve"]
 parse = ["run", "-p", "mgf_dev", "--", "parse"]
-compare = ["run", "-p", "mgf_dev", "--", "compare"]
+# the algorithm for this is somewhat slow, so run it in release mode
+compare = ["run", "-p", "mgf_dev", "--release", "--", "compare"]
