feat: add a Cargo feature for `mgf_dev`-specific functionality (#541)
as discussed in https://codeberg.org/mergiraf/mergiraf/issues/534#issuecomment-5994640

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/541
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Co-authored-by: Ada Alakbarova <ada.alakbarova@proton.me>
Co-committed-by: Ada Alakbarova <ada.alakbarova@proton.me>

--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -29,6 +29,6 @@ jobs:
       - name: Format
         run: cargo fmt --all -- --check
       - name: Lint
-        run: cargo clippy --workspace --all-targets --locked -- -Dwarnings
+        run: cargo clippy --workspace --all-features --all-targets --locked -- -Dwarnings
       - name: Run tests
         run: cargo test --workspace --all-features --locked
