ci: Fix `cargo install git-cliff` with `--locked` (#544)
I'm a bit shocked that `--locked` isn't happening by default for `cargo install`, especially when a `--version` is provided… It led to an install failure of git-cliff 2.9.1 because git-cliff 2.10.0 had been published. Sad.

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/544
Reviewed-by: Ada Alakbarova <ada4a@noreply.codeberg.org>
Co-authored-by: wetneb <wetneb@noreply.codeberg.org>
Co-committed-by: wetneb <wetneb@noreply.codeberg.org>

--- a/.forgejo/workflows/release.yml
+++ b/.forgejo/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Set up git-cliff
         run: |
           if [ ! -e ~/.cargo/bin/git-cliff ]; then
-            cargo install git-cliff --features gitea --version 2.9.1
+            cargo install git-cliff --features gitea --version 2.9.1 --locked
           fi
       - name: Run tests
         run: cargo test --workspace --locked
