--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ tree-sitter-rust-orchard = "0.11"
 tree-sitter-json = "0.24"
 tree-sitter-yaml = "0.7.1"
 tree-sitter-toml-ng = "0.7.0"
-tree-sitter-java = "0.23"
+tree-sitter-java-orchard = "0.2"
 tree-sitter-kotlin-ng = "1.1.0"
 tree-sitter-html = "0.23"
 tree-sitter-javascript = "0.23"
@@ -59,9 +59,9 @@ regex = "1.11.1"
 itertools = "0.14.0"
 tree-sitter-nix = "0.3.0"
 typed-arena.workspace = true
-tree-edit-distance = "0.4"
 clap.workspace = true
 stderrlog.workspace = true
+tree-edit-distance = "0.4"
 log = "0.4"
 rand = "0.9.2"
 etcetera = "0.10.0"
