--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,6 +75,7 @@ oneshot = {version = "0.1.11", default-features = false, features = ["std"]}
 tree-sitter-devicetree = "0.14.1"
 tree-sitter-systemverilog = "0.2.1"
 tree-sitter-make = "1.1.1"
+tree-sitter-starlark = "1.3.0"
 
 # for transitive dependencies that incorrectly specify minimal required versions of their dependencies
 [target."cfg(any())".dependencies]
