feat: Switch to `tree-sitter-dart-orchard` (#557)
New version of #405, updating the grammar to a new version.
I fixed an issue in the grammar which meant that semicolons were treated as direct children of class bodies, hence the test failure that we noticed in #405.

Co-authored-by: Hannes <33062605+HannesGitH@users.noreply.github.com>
Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/557
Reviewed-by: Ada Alakbarova <ada4a@noreply.codeberg.org>
Co-authored-by: Antonin Delpeuch <antonin@delpeuch.eu>
Co-committed-by: Antonin Delpeuch <antonin@delpeuch.eu>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ tree-sitter-xml = "0.7.0"
 tree-sitter-go = "0.23.4"
 tree-sitter-gomod-orchard = "0.4"
 tree-sitter-gosum-orchard = "0.2"
-tree-sitter-dart = "0.0.4"
+tree-sitter-dart-orchard = "0.1"
 tree-sitter-typescript = "0.23.2"
 tree-sitter-python = "0.23.6"
 tree-sitter-php = "0.23"
