--- a/members.yml
+++ b/members.yml
@@ -10,3 +10,4 @@ developers: # this corresponds to the "Developers" team: https://codeberg.org/or
   - funkeleinhorn
   - bobvanderlinden
   - senekor
+  - mathstuf
