--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ tree-sitter-md = "0.3.2"
 tree-sitter-hcl = "1.1.0"
 tree-sitter-ini = "1.3.0"
 tree-sitter-haskell = "0.23.1"
+tree-sitter-cmake = "0.7.1"
 regex = "1.11.1"
 itertools = "0.14.0"
 tree-sitter-nix = "0.3.0"
