tests: Utility to minimize test cases, continued (#527)
Closes #456.

Co-authored-by: Antonin Delpeuch <antonin@delpeuch.eu>
Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/527
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Co-authored-by: Ada Alakbarova <ada.alakbarova@proton.me>
Co-committed-by: Ada Alakbarova <ada.alakbarova@proton.me>

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,3 +4,4 @@ solve = ["run", "--", "solve"]
 parse = ["run", "-p", "mgf_dev", "--", "parse"]
 # the algorithm for this is somewhat slow, so run it in release mode
 compare = ["run", "-p", "mgf_dev", "--release", "--", "compare"]
+minimize = ["run", "-p", "mgf_dev", "--", "minimize"]
