--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,9 @@ members = ["mgf_dev"]
 
 [workspace.dependencies]
 clap = { version = "4.5.46", features = ["derive"] }
+log = "0.4"
+rand = "0.9.2"
 stderrlog = "0.6"
-tempfile = "3"
 typed-arena = "2"
 
 [package]
@@ -62,9 +63,9 @@ tree-sitter-nix = "0.3.0"
 typed-arena.workspace = true
 clap.workspace = true
 stderrlog.workspace = true
+log.workspace = true
+rand.workspace = true
 tree-edit-distance = "0.4"
-log = "0.4"
-rand = "0.9.2"
 etcetera = "0.10.0"
 zip = { version = "4.6.0", features = ["deflate"], default-features = false }
 tree-sitter-scala = "0.24"
@@ -78,6 +79,7 @@ tree-sitter-systemverilog = "0.2.1"
 tree-sitter-make = "1.1.1"
 tree-sitter-starlark = "1.3.0"
 nonempty-collections = "1.0.0"
+tempfile = {version = "3", optional = true}
 
 # for transitive dependencies that incorrectly specify minimal required versions of their dependencies
 [target."cfg(any())".dependencies]
@@ -86,10 +88,10 @@ cc = { version = ">=1.2.12", default-features = false, optional = true } # requi
 [dev-dependencies]
 caplog = "0.3.0"
 rstest = {version = "0.26.1", default-features = false}
-tempfile.workspace = true
+tempfile = "3"
 
 [features]
-dev = []
+dev = ["dep:tempfile"]
 
 [profile.dev]
 # to conform to Git's protocol for merge drivers, which requires
