--- a/mgf_dev/Cargo.toml
+++ b/mgf_dev/Cargo.toml
@@ -6,12 +6,14 @@ publish = false
 
 [dependencies]
 clap.workspace = true
+log.workspace = true
 mergiraf = {path = "..", features = ["dev"]}
 stderrlog.workspace = true
 typed-arena.workspace = true
+rand.workspace = true
 
 [dev-dependencies]
-tempfile.workspace = true
+tempfile = "3"
 
 [lints]
 workspace = true
