chore: Better error types for TreeBuilder (#563)
This is an attempt to start revamping our error handling (for #552).

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/563
Reviewed-by: Ada Alakbarova <ada4a@noreply.codeberg.org>
Co-authored-by: Antonin Delpeuch <antonin@delpeuch.eu>
Co-committed-by: Antonin Delpeuch <antonin@delpeuch.eu>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,7 @@ tree-sitter-make = "1.1.1"
 tree-sitter-starlark = "1.3.0"
 nonempty-collections = "1.0.1"
 tempfile = {version = "3", optional = true}
+thiserror = "2"
 
 # for transitive dependencies that incorrectly specify minimal required versions of their dependencies
 [target."cfg(any())".dependencies]
