--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ tree-sitter-java-orchard = "0.3"
 tree-sitter-kotlin-ng = "1.1"
 tree-sitter-html = "0.23"
 tree-sitter-javascript = "0.25"
+tree-sitter-c = "0.24.1"
 tree-sitter-cpp = "0.23"
 tree-sitter-c-sharp = "0.23"
 tree-sitter-xml = "0.7"
