fix(ci): reinstate the caching based on the Rust version (#656)
The `rust-toolchain` step was deleted all the way in 82e037153, so
here's a reasonably simple replacement

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/656
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Co-authored-by: Ada Alakbarova <ada.alakbarova@proton.me>
Co-committed-by: Ada Alakbarova <ada.alakbarova@proton.me>

--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+      - id: get-rust-version
+        name: Get Rust version (for caching)
+        run: echo "rust-version='$(rustc -V)'" >> $FORGEJO_OUTPUT
       - name: Cache build dependencies
         uses: actions/cache@v4
         with:
@@ -25,7 +28,7 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: "${{runner.os}} Rust ${{steps.rust-toolchain.outputs.cachekey}} lock ${{ hashFiles('**/Cargo.lock') }}"
+          key: "${{runner.os}} Rust ${{ steps.get-rust-version.outputs.rust-version }} lock ${{ hashFiles('**/Cargo.lock') }}"
       - name: Format
         run: cargo fmt --all -- --check
       - name: Lint
