--- a/.forgejo/workflows/release.yml
+++ b/.forgejo/workflows/release.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           fetch-depth: 0 # for changelog generation
           $fetch-tags: true # for changelog generation
+      - id: get-rust-version
+        name: Get Rust version (for caching)
+        run: echo "rust-version='$(rustc -V)'" >> $FORGEJO_OUTPUT
       - name: Cache build dependencies
         uses: actions/cache@v4
         with:
@@ -23,7 +26,7 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: "${{runner.os}} Rust ${{steps.rust-toolchain.outputs.cachekey}} lock ${{ hashFiles('**/Cargo.lock') }}"
+          key: "${{runner.os}} Rust ${{ steps.get-rust-version.outputs.rust-version }} lock ${{ hashFiles('**/Cargo.lock') }}"
       - name: Install cross
         run: cargo binstall cross
       - name: Run tests
