perf: store conflict regexes inside `DisplaySettings` (#659)
this means they're only created once, instead of on every call to
`ParsedMerge::parse`

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/659
Co-authored-by: Ada Alakbarova <ada.alakbarova@proton.me>
Co-committed-by: Ada Alakbarova <ada.alakbarova@proton.me>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,7 @@ tree-sitter-starlark = "1.3"
 nonempty-collections = "1.1"
 tempfile = {version = "3", optional = true}
 thiserror = "2"
+derive_more = { version = "2.1.1", features = ["eq"] }
 
 # for transitive dependencies that incorrectly specify minimal required versions of their dependencies
 [target."cfg(any())".dependencies]
