chore: allow to build .deb package with simply "cargo deb" (#664)
Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/664
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Co-authored-by: Igor Velkov <iav@iav.lv>
Co-committed-by: Igor Velkov <iav@iav.lv>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -142,3 +142,9 @@ archive-suffix = ".tar.gz"
 pkg-fmt = "zip"
 archive-suffix = ".zip"
 
+# used for "deb" packaging with "cargo deb" (https://crates.io/crates/cargo-deb)
+[package.metadata.deb]
+assets = [
+    "$auto",
+    { source = "doc/book/*", dest = "usr/share/doc/mergiraf/book", mode = "644"},
+]
